Herramientas1. PEC1. Cazorla Mágica. Finished. BEM naming+ITCSS structure. Added SASS, some mixins and simple javascript code.

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <script type="module" src="js/app.js"></script>
-</head>
-<body>
-    <include src="src/views/header.html"></include>
-    <h1 class="icon">PARCEL HELLO WORLD</h1>
-</body>
+
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="/src/css/styles.scss" />
+    <title>Cazorla Mágica - PORTADA</title>
+  </head>
+
+  <body>
+    <!-- Header -->
+    <include src="./src/common/header.html"></include>
+  
+    <!-- Main Content -->
+    <main class="main-content">
+      <section class="article-section article-section--bg-color-secondary article-section--transparent">
+        <h2 class="article-section__title article-section__title--color_light text-center">Cazorla. ¿Dónde estamos?.</h2>
+        <div class="article-section__container">
+            <p class="article-section__container-description">Cazorla es un municipio situado al este de la provincia 
+              de Jaén, dentro del Parque Natural de las Sierras de Cazorla, Segura y Las Villas, el mayor espacio 
+              protegido de España, el segundo de Europa y declarado Reserva de la Biosfera por la UNESCO desde 1983. 
+              El Parque Natural se conforma como un laberinto orográfico de valles, calares, tajos, montañas y altiplanos 
+              de gran importancia hidrológica (por la gran cantidad de ríos y arroyos que de él manan); botánica (pino 
+              laricio, pino carrasco, pino negral y muchas especies endémicas); faunístico-cinegética y paisajística. 
+              De todo lo cual se deriva que sea uno de los espacios naturales más visitados del país, por su especial 
+              relevancia ecológica, donde la Naturaleza se expresa en su máximo esplendor.</p>
+            <p class="article-section__container-description"> 
+              El Parque Natural se conforma como un laberinto orográfico de valles, calares, tajos, montañas y altiplanos 
+              de gran importancia hidrológica (por la gran cantidad de ríos y arroyos que de él manan); botánica (pino 
+              laricio, pino carrasco, pino negral y muchas especies endémicas); faunístico-cinegética y paisajística. 
+              De todo lo cual se deriva que sea uno de los espacios naturales más visitados del país, por su especial 
+              relevancia ecológica, donde la Naturaleza se expresa en su máximo esplendor.</p>
+        </div>
+      </section>
+      <section class="article-section">
+        <h2 class="article-section__title text-center">Un tesoro a tu alcance.</h2>
+        <div class="article-section__container">
+          <div class="article-section__container-info">
+            <div class="article-section__container-frame">
+                <img class="article-section__container-frame-photo" src="/src/assets/images/index-cazorla-pueblo.jpg" alt="">
+            </div>
+            <p class="article-section__container-description">
+              Cazorla es una localidad y municipio español situado en la parte septentrional de la comarca de Sierra de Cazorla, 
+              en la provincia de Jaén. Limita con los municipios jienenses de Santiago-Pontones, La Iruela, Chilluévar, Santo 
+              Tomé, Úbeda, Torreperogil, Peal de Becerro y Quesada; y con el municipio granadino de Castril. Por su término 
+              discurren los ríos Guadalquivir, Guadalentín y Cerezuelo (o de la Vega). El municipio cazorleño comprende los 
+              núcleos de población de Cazorla —capital municipal, comarcal y sede de un partido judicial propio—, El Molar, 
+              Vadillo Castril, Valdecazorla, La Ribera, El Valle, Los Peralejos, Puente de la Cerrada, El Almicerán, Nava de San 
+              Pedro y Casas de Estepa.
+            </p>
+            <p class="article-section__container-description">
+              Accede nuestra carta de presentación para conocernos mejor...
+            </p>
+            <a href="/src/presentacion.html" class="button">Presentación</a>
+          </div>
+          <div class="article-section__container-info">
+            <div class="article-section__container-frame">
+                <img class="article-section__container-frame-photo" src="/src/assets/images/index-cazorla-paisaje.jpg" alt="">
+            </div>
+            <p class="article-section__container-description">
+              Es un auténtico placer pasear por sus estrechas y empinadas calles plenas de sabor 
+              arábigo-andaluz; grabar en la retina o recoger con sus cámaras imágenes, una y mil, de singular encanto; retener 
+              en la memoria sonidos, colores y aromas únicos, rumores de aguas cantarinas en las numerosas fuentes… Visitar sus 
+              comercios donde encontrarán los productos característicos de la comarca. Familiarizarse con cientos de exquisitos 
+              sabores de las tapas y platos que los distintos bares y restaurantes les ofrecen… Todo ello, bien merece, disfrutar 
+              y vivir esa multitud de gratas sensaciones que Cazorla dona a todos aquellos que vienen hasta aquí para conocerla.
+            </p>
+            <p class="article-section__container-description">
+              Si deseas conocer todo lo que Cazorla te puede ofrecer, pulsa en el siguiente enlace...
+            </p>
+            <a href="/src/categoria.html" class="button">Categoría</a>
+          </div>
+          <div class="article-section__container-info">
+            <div class="article-section__container-frame">
+                <img class="article-section__container-frame-photo" src="/src/assets/images/logo.png" alt="">
+            </div>
+            <p class="article-section__container-description">
+              El municipio cuenta con un gran patrimonio entre el que destacan Iglesias, Museos y Monumentos pero no todos están 
+              disponibles en nuestra web. A través del siguiente enlaces tendrás información sobre más bondades que puede ofrecerte 
+              Cazorla y de donde ha salido la información que ha motivado esta web.
+            </p>
+            <p class="article-section__container-description">
+              Como verás Cazorla tiene mucho que ofrecer, más incluso de lo que mostramos en esta web, es por ello que, para 
+              aquellos deseosos de conocer más, les ofrecemos enlaces alternativos para amplicar información y conocer de donde 
+              salen los recursos utilizados en nuestra web. Accede a "Enlaces" si deseas conocer más...
+            </p>
+            <a href="/src/enlaces.html" class="button">Enlaces</a>
+          </div>
+        </div>
+      </section>
+    </main>
+  
+    <!-- Footer -->
+    <footer>
+      <include src="./src/common/footer.html"></include>
+    </footer>
+  </body>
+  <script type="module" src="js/app.js"></script>
 </html>
