Herramientas1. PEC1. Changed footer social class tag, because adblock blocks tag with "social" name. Second Try.

--- a/src/common/footer.html
+++ b/src/common/footer.html
@@ -6,13 +6,13 @@
     <p><i class="fa fa-envelope"></i>&nbsp;Email: <a href="mailto:andrests@uoc.edu" class="footer__contact-link">andrests@uoc.edu</a></p>
   </div>
   
-  <div class="footer__follow">
+  <div class="footer__soc">
     <h2 class="footer__title">Síguenos&nbsp;</h2>
-    <ul class="footer__follow-list">
-      <li><a href="#" target="_blank" class="footer__follow-link"><i class="fab fa-facebook"></i></a></li>
-      <li><a href="#" target="_blank" class="footer__follow-link"><i class="fab fa-instagram"></i></a></li>
-      <li><a href="#" target="_blank" class="footer__follow-link"><i class="fab fa-twitter"></i></a></li>
-      <li><a href="#" target="_blank" class="footer__follow-link"><i class="fab fa-linkedin"></i></a></li>
+    <ul class="footer__soc-list">
+      <li><a href="#" target="_blank" class="footer__soc-link"><i class="fab fa-facebook"></i></a></li>
+      <li><a href="#" target="_blank" class="footer__soc-link"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="#" target="_blank" class="footer__soc-link"><i class="fab fa-twitter"></i></a></li>
+      <li><a href="#" target="_blank" class="footer__soc-link"><i class="fab fa-linkedin"></i></a></li>
     </ul>
   </div>
 </footer>
